--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <form action="">
+        <label for="first-name">First name</label>
+        <input id="first-name" type="text" placeholder="First name">
+
+        <input type="text" placeholder="Last name">
+
+        <input type="password" placeholder="Password">
+
+        <button type="submit">Done!</button>
+    </form>
 </body>
 </html>
