--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <form action="">
         <label for="first-name">First name</label>
-        <input id="first-name" type="text" placeholder="First name">
+        <input autofocus id="first-name" type="text" placeholder="First name" name="firstName" required>
 
-        <input type="text" placeholder="Last name">
+        <input type="text" placeholder="Last name" name="email" required>
 
-        <input type="password" placeholder="Password">
+        <input type="password" placeholder="Password" name="password" required>
 
         <button type="submit">Done!</button>
     </form>
