Input in label enother way

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </head>
 <body>
     <form action="">
-        <label for="first-name">First name</label>
-        <input autofocus id="first-name" type="text" placeholder="First name" name="firstName" required>
+        <label>
+            <span>First name</span> 
+            <input autofocus id="first-name" type="text" placeholder="First name" name="firstName" required>
+        </label>
+        
 
-        <input type="text" placeholder="Last name" name="email" required>
+        <input type="email" placeholder="Last name" name="email" required>
 
         <input type="password" placeholder="Password" name="password" required>
 
